# GuttenbergIndexingTB

./: CMakeLists.txt  README.md  main.cpp
include/: cfg.h  dcomp.h  parsing.h
src/: cfg.cpp  dcomp.cpp  parsing.cpp
